[project]
name = "ai-app-template"
version = "0.1.0"
description = "FastAPI template with settings, logging and healthcheck"
authors = [
    { name = "pbednarczyk", email = "ibednar88@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
# Tell Poetry where to find the importable package when installing the project
packages = [{ include = "app", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.18.1,<2.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","C4","DTZ","T20"]
lint.ignore = ["E501"]  # black pilnuje długości
src = ["src"]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
pythonpath = "src"

[project.scripts]
sample_app = "app.sample_app:main"
